# Multimodal-Techniques-for-Video-Based-Violence-Detection

./: .gitignore  4.2.0  LICENSE  README.md  pyproject.toml
actions/: evaluate.py  extract_dataset.py  extract_metadata.py  helpers.py
data/: labels.json
data/metadata/: video_links_labels.csv
data/prompts/: llm_judge.txt  llm_judge_local.txt  llm_judge_qwen.txt  llm_judge_qwen2.txt  video_understanding_gemini.txt  video_understanding_qwen_system.txt  video_understanding_qwen_user.txt
models/: beats.py  clap.py  clip.py  gemini.py  gpt.py  ollama.py  qwen.py  qwen_judge.py  vad.py  whisper.py  xclip.py
notebooks/: download_dataset.ipynb  extract_metadata.ipynb  zero_shot_classification.ipynb
notebooks/zero_shot_classification/: evaluate_results.ipynb  get_gemini_transcripts.ipynb  get_qwen_transcripts.ipynb  get_whisper_transcripts.ipynb  llm_as_a_judge.ipynb  run_audio_models.ipynb  run_vision_models.ipynb
