[project]
name = "multimodal-techniques-for-video-based-violence-detection"
version = "0.1.0"
description = ""
authors = [
    {name = "annkou",email = "annakoutoug@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ruff (>=0.14.0,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
