[project]
name = "multimodal-techniques-for-video-based-violence-detection"
version = "0.1.0"
description = ""
authors = [
    {name = "annkou",email = "annakoutoug@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "ruff (>=0.14.0,<0.15.0)",
    "dashscope (>=1.24.9,<2.0.0)",
    "openai (>=2.6.1,<3.0.0)",
    "together (>=1.5.29,<2.0.0)",
    "google-cloud-storage (>=3.4.1,<4.0.0)",
    "datasets (>=4.3.0,<5.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "plotly (>=6.3.1,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "google-genai (>=1.48.0,<2.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "transformers (==4.50.3)",
    "decord (>=0.6.0,<0.7.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "silero-vad (>=6.1.0,<7.0.0)",
    "accelerate (==1.11.0)",
    "llama-index-llms-ollama (>=0.9.0,<0.10.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"


[tool.poetry.dependencies]
